--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^2.0.2",
-    "@lingui-solid/babel-plugin-extract-messages": "workspace:^",
+    "@lingui-solid/babel-plugin-extract-messages": "^5.1.3",
     "@lingui-solid/babel-plugin-lingui-macro": "workspace:^",
     "@lingui-solid/vite-plugin": "^5.1.3",
     "@lingui/cli": "^5.3.1",
